# open-whisperflow

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_PLAN.md  CONTRIBUTING.md  DEV_SETUP.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PROMPT_TEMPLATES.md  README.md  TESTING.md  TODO.md  config.example.toml  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml
src/: App.css  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: create_icons.sh
src-tauri/src/: commands.rs  config_test.rs  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/docker/: mod.rs
src-tauri/src/hotkeys/: mod.rs
src-tauri/src/injection/: mod.rs
src-tauri/src/llm/: mod.rs
src-tauri/src/transcription/: mod.rs
src-tauri/src/utils/: mod.rs
src/components/: FirstRunWizard.css  FirstRunWizard.tsx  RecordingButton.css  RecordingButton.test.tsx  RecordingButton.tsx  SettingsPanel.css  SettingsPanel.tsx  StatusIndicator.css  StatusIndicator.test.tsx  StatusIndicator.tsx
src/test/mocks/: tauri.ts
src/types/: index.ts
