[package]
name = "open-whisperflow"
version = "0.1.0"
description = "Privacy-first, open-source voice-to-text with AI-powered text refinement"
authors = ["Open WhisperFlow Community"]
license = "MIT"
repository = "https://github.com/yourusername/open-whisperflow"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"

# Audio recording
cpal = "0.15"
hound = "3.5"

# Date/time utilities
chrono = "0.4"

# Configuration management
confy = "0.6"
dirs = "5"

# HTTP client for API calls
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }

# Async runtime
async-trait = "0.1"

# Text injection
enigo = "0.2"
arboard = "3"

# Clipboard management
copypasta = "0.10"

# System utilities
sysinfo = "0.33"

# Docker client for faster-whisper integration
bollard = "0.17"
futures-util = "0.3"

[dev-dependencies]
mockito = "1"
tempfile = "3"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
